--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,15 @@
+*{
+  font-family: 'Raleway';
+}
+
+#rojo{
+  color: red;
+}
+
+.datosIniciales{
+  font-size: 14px;
+}
+
 input[type=text] {
     border: none;
     border-bottom: 2px solid #707274;
